[metadata]
name = dpy_button_utils
version = 0.2
author = crazygmr101
author_email = author@example.com
description = An extension for discord.py that allows your bot to use buttons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crazygmr101/button-utils
project_urls =
    Bug Tracker = https://github.com/crazygmr101/button-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src